Set img max-width: 100% to prevent cropping of app images - Updated missed Crunch link from previous update - Set proper @import reference for components/scaffolding.less (had been skipping because of bootstrap name duplication)

--- a/styles/components/scaffolding.less
+++ b/styles/components/scaffolding.less
@@ -9,6 +9,9 @@ html {
   }
 }
 
+img {
+    max-width: 100%;    
+}
 
 // Add some extra padding for navbar
 body {
